--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,7 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: CoralScrum\UserBundle\Entity\User
+    registration:
+        form:
+            type: coral_scrum_user_registration
+
