--- a/src/CoralScrum/UserBundle/Resources/config/services.yml
+++ b/src/CoralScrum/UserBundle/Resources/config/services.yml
@@ -5,3 +5,9 @@ services:
 #    coral_scrum_user.example:
 #        class: %coral_scrum_user.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+    coral_scrum_user.registration.form.type:
+        class: CoralScrum\UserBundle\Form\Type\RegistrationFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: coral_scrum_user_registration }
