--- a/src/CoralScrum/MainBundle/Resources/config/routing.yml
+++ b/src/CoralScrum/MainBundle/Resources/config/routing.yml
@@ -21,7 +21,7 @@ CoralScrumMainBundle_sprint:
 
 CoralScrumMainBundle_task:
     resource: "@CoralScrumMainBundle/Resources/config/routing/task.yml"
-    prefix:   /project/{projectId}/task
+    prefix:   /project/{projectId}/sprint/{sprintId}/task
 
 
 # --- Project / Test
