--- a/src/CoralScrum/MainBundle/Resources/config/routing/sprint.yml
+++ b/src/CoralScrum/MainBundle/Resources/config/routing/sprint.yml
@@ -3,7 +3,7 @@ sprint:
     defaults: { _controller: "CoralScrumMainBundle:Sprint:index" }
 
 sprint_show:
-    pattern:  /{id}/show
+    pattern:  /{sprintId}/show
     defaults: { _controller: "CoralScrumMainBundle:Sprint:show" }
 
 sprint_new:
@@ -16,15 +16,15 @@ sprint_create:
     requirements: { _method: post }
 
 sprint_edit:
-    pattern:  /{id}/edit
+    pattern:  /{sprintId}/edit
     defaults: { _controller: "CoralScrumMainBundle:Sprint:edit" }
 
 sprint_update:
-    pattern:  /{id}/update
+    pattern:  /{sprintId}/update
     defaults: { _controller: "CoralScrumMainBundle:Sprint:update" }
     requirements: { _method: post|put }
 
 sprint_delete:
-    pattern:  /{id}/delete
+    pattern:  /{sprintId}/delete
     defaults: { _controller: "CoralScrumMainBundle:Sprint:delete" }
     requirements: { _method: post|delete }
