Updated home page and login form

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,6 +46,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/project, role: ROLE_USER }
+        - { path: ^/project, role: IS_AUTHENTICATED_FULLY }
         #- { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
