--- a/src/CoralScrum/MainBundle/Resources/config/routing.yml
+++ b/src/CoralScrum/MainBundle/Resources/config/routing.yml
@@ -2,6 +2,9 @@ CSM_homepage:
     pattern:  /
     defaults: { _controller: CoralScrumMainBundle:Home:index }
 
+CSM_login:
+    pattern:  /login
+    defaults: { _controller: CoralScrumMainBundle:Home:index }
 
 # --- Project
 
