--- a/src/CoralScrum/MainBundle/Resources/config/services.yml
+++ b/src/CoralScrum/MainBundle/Resources/config/services.yml
@@ -5,3 +5,6 @@ services:
 #    coral_scrum_main.example:
 #        class: %coral_scrum_main.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+    csm_security:
+        class: CoralScrum\MainBundle\Services\Security
+        arguments: ["@doctrine.orm.entity_manager", "@security.context"]
