--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 app/bootstrap*
 
 # Symfony directories
+bin/*
 vendor/*
 */logs/*
 */cache/*
@@ -11,3 +12,8 @@ web/bundles/*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
+
+# Others
+app/SymfonyRequirements.php
+app/check.php
+web/config.php
